<resources>
    <string name="app_name">F1rstDoc</string>

   <string name="prompt_emaillogin">Email</string>
    <string name="prompt_senhalogin">Senha</string>
    <string name="action_login">Login</string>
    <string name="action_registrar">Registrar</string>
    <string name="action_voltar_login">Voltar para o login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bem vindo !"</string>
    <string name="invalid_username">Email invalido</string>
    <string name="invalid_password">Senha possui menos que 5 caracteres</string>
    <string name="login_failed">"Falha no login"</string>
    <string name="title_registrar">Registrar</string>
    <string name="login">Login</string>


    // Login and Create Account
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Criar conta</string>
    <string name="acessar_sua_conta">Acessar sua conta</string>
    <string name="criar_sua_conta">Crie sua conta</string>
    <string name="registrar">Registrar</string>

    //Message Builder
    <string name="create_docs_success">Documento salvo</string>
    <string name="delete_docs_success">Documento deletado com sucesso</string>
    <string name="delete_docs_failure">Ocorreu um erro!</string>
    <string name="update_docs_success">Documento salvo</string>
    <string name="update_docs_failure">Erro ao salvar!</string>
    <string name="save_docs_firebase_success">Salvo na cloud com sucesso</string>
    <string name="save_docs_firebase_failure">Falha ao salvar</string>
    <string name="save_docs_storage_success">Docs exportados com sucesso</string>
    <string name="save_docs_storage_failure">Falha na exportação</string>
    <string name="import_docs_storage_success">Docs importados com sucesso</string>
    <string name="import_docs_storage_failure">Falha ao importar os docs</string>


 <string name="state_create_docs_success">Documento criado</string>
    <string name="state_create_docs_failure">Falha ao salvar, documento vazio</string>
    <string name="create_account">Conta Registrada</string>
    <string name="error_generic_login">email ou senha invalidos</string>

    <string name="message_cloud_builder">Você deseja exportar\n os dados do F1rstDoc \nna cloud?</string>
    <string name="message_export_builder">Você deseja exportar\n os dados do F1rstDoc\nno dispositivo?</string>
    <string name="message_delete_builder">Você deseja deletar\n este documento?</string>
    <string name="message_logout_builder">Você deseja sair e deslogar desta sessão?</string>
    <string name="dialog_yes_buttom">Sim</string>
    <string name="dialog_no_buttom">Não</string>

   //Create Doc
    <string name="error_save_doc_is_empty">Falha ao salvar, documento vazio</string>



</resources>