<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpadrao"
    >


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/editButtonStyle"
        android:layout_gravity="start"
        android:enabled="true"
        android:text="@string/action_login"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/viewLogin"
        app:layout_constraintTop_toBottomOf="@+id/senhalogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registrar"
        style="@style/editButtonStyle"
        android:layout_gravity="start"
        android:enabled="true"
        android:text="@string/action_registrar"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@id/viewLogin"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tituloLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/emaillogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/viewLogin"
        style="@style/containerComponents"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloLogin" />

    <EditText
        android:id="@+id/emaillogin"
        style="@style/editTextStyle"
        android:drawableRight="@drawable/ic_email"
        android:hint="@string/prompt_emaillogin"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/viewLogin"
        app:layout_constraintStart_toStartOf="@id/viewLogin"
        app:layout_constraintTop_toTopOf="@id/viewLogin" />

    <EditText
        android:id="@+id/senhalogin"
        style="@style/editTextStyle"
        android:layout_marginTop="80dp"
        android:drawableRight="@drawable/ic_senha"
        android:hint="@string/prompt_senhalogin"
        android:inputType="none|textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/viewLogin"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="@id/viewLogin"
        app:layout_constraintTop_toTopOf="@id/emaillogin" />

</androidx.constraintlayout.widget.ConstraintLayout>