<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpadrao"
    >

    <ImageView
        android:id="@+id/imageSantander"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/view_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_santander_grey" />

    <View
        android:id="@+id/view_registrar"
        style="@style/containerRegisterComponents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_create_acount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/criar_sua_conta"
        android:textAlignment="center"
        android:textColor="@color/principal_50per"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/email_registrar"
        app:layout_constraintTop_toTopOf="@id/view_registrar"
        app:layout_constraintVertical_bias="0.146"
        tools:layout_editor_absoluteX="0dp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_registrar"
        style="@style/editTextStyle"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/prompt_emaillogin"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/view_registrar"
        app:layout_constraintStart_toStartOf="@id/view_registrar"
        app:layout_constraintTop_toBottomOf="@id/subtitle_create_acount" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/senha_registrar"
        style="@style/editTextStyle"
        android:layout_marginTop="80dp"
        android:drawableRight="@drawable/ic_senha"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/prompt_senhalogin"
        android:inputType="none|textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/view_registrar"
        app:layout_constraintStart_toStartOf="@id/view_registrar"
        app:layout_constraintTop_toTopOf="@id/email_registrar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registrar"
        style="@style/editButtonEntrarStyleSplash"
        android:layout_gravity="start"
        android:layout_marginTop="35dp"
        android:text="@string/registrar"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/senha_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>